fixed top image border line visibility issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1288,6 +1288,8 @@ input, select, textarea {
 				width: 1px;
 				height: calc(3.5rem + 1px);
 				background: #ffffff;
+					margin-bottom: 10rem;
+
 			}
 
 		#header > :first-child {
@@ -1309,6 +1311,7 @@ input, select, textarea {
 
 			#header .logo .icon:before {
 				font-size: 2rem;
+				
 			}
 
 		#header .content {
@@ -1317,6 +1320,7 @@ input, select, textarea {
 			border-top-width: 1px;
 			border-bottom-width: 1px;
 			max-width: 100%;
+			margin-top: 4.5rem;
 		}
 
 			#header .content .inner {
